[package]
name = "arducam-tof"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.63"

[build-dependencies]
bindgen = "0.69.4"

[dev-dependencies]
bincode = "1.3.3"
kiss3d = "0.35.0"
nalgebra = {version = "0.30.0"}
opencv = {version = "0.92.1", features = ["clang-runtime"]}
serde = { version = "1.0.204", features = ["derive"] }
